tests/negative/gold/bad_literal5_test.gold
tests/negative/bad_literal5_test.toit:6:9: error: Invalid number literal
  print 0x_123456
        ^~~~~~~~~
tests/negative/bad_literal5_test.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
